feat: jwt middleware
