# internal/server/routes.go
@@ -1,11 +1,13 @@
 package server
 
 import (
+	"go-fiber-postgres-template/pkg/core"
+
 	"github.com/gofiber/fiber/v2"
 )
 
 func (s *FiberServer) RegisterFiberRoutes() {
-	s.App.Get("/", s.HelloWorldHandler)
+	s.App.Get("/", core.IsAuthenticated(), s.HelloWorldHandler)
 	s.App.Get("/health", s.healthHandler)
 }
 
@@ -15,7 +17,7 @@ func (s *FiberServer) RegisterFiberRoutes() {
 //	@Description	Hello World
 //	@Tags			Hello World
 //	@Success		200	{object} map[string]string
-//	@Failure		500	{object} map[string]string
+//	@Failure		400	{object} core.ErrorResponse
 //	@Router			/ [get]
 func (*FiberServer) HelloWorldHandler(c *fiber.Ctx) error {
 	resp := fiber.Map{
@@ -31,7 +33,7 @@ func (*FiberServer) HelloWorldHandler(c *fiber.Ctx) error {
 //	@Description	check server health
 //	@Tags			Health
 //	@Success		200	{object} map[string]string
-//	@Failure		500	{object} map[string]string
+//	@Failure		400	{object} core.ErrorResponse
 //	@Router			/health [get]
 func (s *FiberServer) healthHandler(c *fiber.Ctx) error {
 	return c.JSON(s.db.Health())
